# nir_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  for_numbers.csv  names.txt  pyproject.toml  setup.cfg  some.txt  start.sh
bot/: bot.py  commands.py  configs.py  db.py  main.py  our_types.py  parsing.py  states.py  utils.py
bot/handlers/: common.py  email.py  menu.py  person.py  phone.py
bot/keyboards/: inlines.py
bot/schemes/: delivers.py  objects.py
bot/services/: cards.py  pdfs.py  search.py
bot/services/parser/: Telegram_parser.py  google_parser.py  main.py  vk_parser.py
