[tool.poetry]
name = "nir_bot"
version = "0.1.0"
description = ""
authors = ["iliyB <iliy-b@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
aiogram = "3.0.0b3"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"
aiocsv = "^1.2.2"
phonenumbers = "^8.12.49"

[tool.poetry.dev-dependencies]

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
