[tool.poetry]
name = "nir_bot"
version = "0.1.0"
description = ""
authors = ["iliyB <iliy-b@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "3.0.0b4"
aiocsv = "^1.2.2"
phonenumbers = "^8.12.49"
pydantic = "^1.10.2"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
aiomysql = "^0.1.1"
py-singleton = "^1.0.0"
fpdf = "^1.7.2"
weasyprint = "^57.1"
fuzzywuzzy = "^0.18.0"
emoji = "^2.2.0"

[tool.poetry.dev-dependencies]

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 88
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
